correct css spacing

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 
 html, body {
     margin: 0;
-    padding: 0 2vw;
+    padding: 0 5vw;
     background-color: var(--color-bg);
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     /* font-family: Inter; */
